fix page header title vertical alignment

--- a/assets/sass/partials/_layout.scss
+++ b/assets/sass/partials/_layout.scss
@@ -46,7 +46,7 @@ body * {
     margin:$su*2.5 0 $su*3 0;
     padding:$su*2;
     
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1200px) {
         margin:$su*7 0 $su*14 0;
     }
 
